@@ -2,18 +2,36 @@ package ru.funkids.campservice.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.funkids.campservice.dto.CampMemberAssignDto;
 import ru.funkids.campservice.dto.CampMemberResponseDto;
-import ru.funkids.campservice.entity.*;
+import ru.funkids.campservice.dto.CampStaffSubRoleUpdateDto;
+import ru.funkids.campservice.dto.SessionStaffAssignmentResponseDto;
+import ru.funkids.campservice.entity.AssignmentStatus;
+import ru.funkids.campservice.entity.Camp;
+import ru.funkids.campservice.entity.CampMember;
+import ru.funkids.campservice.entity.CampMemberSession;
+import ru.funkids.campservice.entity.CampRole;
+import ru.funkids.campservice.entity.Session;
+import ru.funkids.campservice.entity.StaffSubRole;
 import ru.funkids.campservice.exception.ResourceNotFoundException;
-import ru.funkids.campservice.repository.*;
+import ru.funkids.campservice.repository.CampMemberRepository;
+import ru.funkids.campservice.repository.CampMemberSessionRepository;
+import ru.funkids.campservice.repository.CampRepository;
+import ru.funkids.campservice.repository.CounselorAssignmentRepository;
+import ru.funkids.campservice.repository.SessionRepository;
 import ru.funkids.campservice.service.AuditEventService;
 import ru.funkids.campservice.service.CampMemberService;
+import ru.funkids.campservice.service.CampNotificationService;
 
 import java.time.OffsetDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -28,247 +46,227 @@ public class CampMemberServiceImpl implements CampMemberService {
     private final SessionRepository sessionRepository;
     private final CounselorAssignmentRepository counselorAssignmentRepository;
     private final AuditEventService auditEventService;
+    private final CampNotificationService campNotificationService;
 
-    // =========================================================================
-    // Назначение вожатого
-    // =========================================================================
-
-    /**
-     * Назначить вожатого в лагерь и привязать к указанным сменам.
-     *
-     * Логика:
-     * 1. Проверяем, что актор — OWNER данного лагеря.
-     * 2. Если вожатый ещё не является членом лагеря — создаём CampMember(COUNSELOR).
-     * 3. Для каждой smены из dto.sessionIds создаём CampMemberSession (если ещё нет).
-     * 4. Пишем аудит для каждой новой привязки.
-     */
     @Override
     public CampMemberResponseDto assignCounselor(CampMemberAssignDto dto, UUID adminId) {
-        log.info("Assigning counselor {} to camp {} sessions {} by admin {}",
-                dto.getUserId(), dto.getCampId(), dto.getSessionIds(), adminId);
+        log.info("Assigning staff {} to camp {} sessions {} as {} by admin {}",
+                dto.getUserId(), dto.getCampId(), dto.getSessionIds(), dto.getSubRole(), adminId);
 
-        Camp camp = campRepository.findById(dto.getCampId())
-                .orElseThrow(() -> new ResourceNotFoundException("Лагерь не найден: " + dto.getCampId()));
+        Camp camp = requireCampOwner(dto.getCampId(), adminId,
+                "Только владелец лагеря может назначать сотрудников");
 
-        // Проверяем, что adminId — это OWNER лагеря
-        boolean isOwner = campMemberRepository.existsByCampIdAndUserIdAndRoleAndActiveTrue(
-                dto.getCampId(), adminId, CampRole.OWNER)
-                || camp.getOwnerId().equals(adminId);
+        CampMember campMember = findOrCreateCampMember(camp, dto.getUserId());
+        boolean wasCampMemberActive = campMember.isActive();
+        List<SessionStaffAssignmentResponseDto> createdAssignments = new ArrayList<>();
 
-        if (!isOwner) {
-            throw new IllegalStateException("Только владелец лагеря может назначать вожатых");
-        }
+        for (UUID sessionId : dto.getSessionIds()) {
+            Session session = sessionRepository.findById(sessionId)
+                    .orElseThrow(() -> new ResourceNotFoundException("Смена не найдена: " + sessionId));
 
-        // Находим или реактивируем запись CampMember для этого вожатого.
-        // Важно: ищем среди ВСЕХ записей (активных и неактивных) по (campId, userId),
-        // чтобы не нарушить unique constraint uk_camp_members_camp_user при повторном назначении
-        // после выхода из лагеря.
-        CampMember campMember;
-        List<CampMember> existing = campMemberRepository.findByCampIdAndUserId(dto.getCampId(), dto.getUserId());
-
-        if (!existing.isEmpty()) {
-            // Запись уже есть (возможно неактивная после leaveCamp) — реактивируем
-            campMember = existing.get(0);
-            if (!campMember.isActive()) {
-                log.info("Reactivating existing CampMember for user {} in camp {}", dto.getUserId(), dto.getCampId());
-                campMember.setActive(true);
-                campMember.setRemovedAt(null);
-                campMember = campMemberRepository.save(campMember);
+            if (!session.getCamp().getId().equals(dto.getCampId())) {
+                throw new IllegalArgumentException("Смена " + sessionId + " не относится к лагерю " + dto.getCampId());
             }
-        } else {
-            // Первое назначение — создаём новую запись
-            log.info("Creating new CampMember for user {} in camp {}", dto.getUserId(), dto.getCampId());
-            campMember = campMemberRepository.save(CampMember.builder()
-                    .camp(camp)
-                    .userId(dto.getUserId())
-                    .role(CampRole.COUNSELOR)
-                    .active(true)
-                    .build());
-        }
 
-        // Привязываем к каждой смене из списка
-        List<String> addedSessionNames = new ArrayList<>();
+            CampMemberSession cms = campMemberSessionRepository
+                    .findByCampMemberIdAndSessionId(campMember.getId(), sessionId)
+                    .orElse(null);
 
-        if (dto.getSessionIds() != null) {
-            for (UUID sessionId : dto.getSessionIds()) {
-                Session session = sessionRepository.findById(sessionId)
-                        .orElseThrow(() -> new ResourceNotFoundException("Смена не найдена: " + sessionId));
+            AssignmentStatus targetStatus = dto.getSubRole() == StaffSubRole.COUNSELOR
+                    ? AssignmentStatus.PENDING
+                    : AssignmentStatus.ACCEPTED;
 
-                // Проверяем, что смена принадлежит этому лагерю
-                if (!session.getCamp().getId().equals(dto.getCampId())) {
-                    throw new IllegalArgumentException(
-                            "Смена " + sessionId + " не принадлежит лагерю " + dto.getCampId());
-                }
-
-                boolean alreadyAssigned = campMemberSessionRepository
-                        .existsByCampMemberIdAndSessionId(campMember.getId(), sessionId);
-
-                if (!alreadyAssigned) {
-                    CampMemberSession cms = CampMemberSession.builder()
-                            .campMember(campMember)
-                            .session(session)
-                            .build();
-                    campMemberSessionRepository.save(cms);
-                    addedSessionNames.add("«" + session.getTitle() + "»");
-                    log.info("Counselor {} assigned to session {} ({})", dto.getUserId(), sessionId, session.getTitle());
-                }
+            if (cms == null) {
+                cms = CampMemberSession.builder()
+                        .campMember(campMember)
+                        .session(session)
+                        .subRole(dto.getSubRole())
+                        .assignmentStatus(targetStatus)
+                        .assignedByUserId(adminId)
+                        .active(true)
+                        .build();
+            } else {
+                cms.setSubRole(dto.getSubRole());
+                cms.setAssignmentStatus(targetStatus);
+                cms.setAssignedByUserId(adminId);
+                cms.setAutoDetachedAt(null);
+                cms.setRespondedAt(dto.getSubRole() == StaffSubRole.COUNSELOR ? null : OffsetDateTime.now());
+                cms.setActive(true);
             }
-        }
 
-        // Аудит
-        if (!addedSessionNames.isEmpty()) {
-            String sessionList = String.join(", ", addedSessionNames);
+            CampMemberSession saved;
+            try {
+                saved = campMemberSessionRepository.save(cms);
+            } catch (DataIntegrityViolationException ex) {
+                saved = campMemberSessionRepository.findByCampMemberIdAndSessionId(campMember.getId(), sessionId)
+                        .orElseThrow(() -> ex);
+            }
+            createdAssignments.add(mapSessionAssignment(saved));
+            sendAssignmentNotification(camp, session, saved, dto.getUserId());
+
             auditEventService.log(
                     dto.getCampId(),
-                    "COUNSELOR_ASSIGNED",
-                    "Вожатый назначен на смены " + sessionList + " лагеря «" + camp.getName() + "»",
-                    "CAMP_MEMBER",
-                    campMember.getId(),
+                    "STAFF_ASSIGNED_TO_SESSION",
+                    "Сотрудник назначен на смену «" + session.getTitle() + "» с подролью " + dto.getSubRole(),
+                    "SESSION",
+                    session.getId(),
                     adminId,
-                    Map.of("counselorUserId", dto.getUserId().toString(),
-                            "sessions", dto.getSessionIds().stream().map(UUID::toString).collect(Collectors.toList()))
+                    Map.of(
+                            "userId", dto.getUserId().toString(),
+                            "subRole", dto.getSubRole().name(),
+                            "assignmentStatus", targetStatus.name()
+                    )
             );
         }
 
-        return mapToDto(campMember);
-    }
-
-    // =========================================================================
-    // Отзыв доступа к конкретной смене (без исключения из лагеря)
-    // =========================================================================
-
-    /**
-     * Отозвать доступ вожатого к конкретной смене.
-     * CampMember-запись остаётся активной — вожатый всё ещё в лагере,
-     * но теряет доступ к этой смене.
-     */
-    public void removeFromSession(UUID campId, UUID counselorUserId, UUID sessionId, UUID adminId) {
-        log.info("Removing counselor {} from session {} in camp {} by admin {}",
-                counselorUserId, sessionId, campId, adminId);
-
-        Camp camp = campRepository.findById(campId)
-                .orElseThrow(() -> new ResourceNotFoundException("Лагерь не найден: " + campId));
-
-        boolean isOwner = campMemberRepository.existsByCampIdAndUserIdAndRoleAndActiveTrue(
-                campId, adminId, CampRole.OWNER) || camp.getOwnerId().equals(adminId);
-        if (!isOwner) throw new IllegalStateException("Только владелец лагеря может отзывать назначения");
-
-        CampMember campMember = campMemberRepository
-                .findByCampIdAndUserIdAndActiveTrue(campId, counselorUserId)
-                .orElseThrow(() -> new ResourceNotFoundException("Вожатый не найден в лагере"));
-
-        CampMemberSession cms = campMemberSessionRepository
-                .findByCampMemberIdAndSessionId(campMember.getId(), sessionId)
-                .orElseThrow(() -> new ResourceNotFoundException("Привязка к смене не найдена"));
-
-        Session session = cms.getSession();
-        campMemberSessionRepository.delete(cms);
-
-        // Также снимаем вожатого со всех отрядов этой смены
-        counselorAssignmentRepository.findByUserIdAndActiveTrue(counselorUserId).stream()
-                .filter(a -> a.getDetachment().getSession().getId().equals(sessionId))
-                .forEach(a -> {
-                    a.setActive(false);
-                    a.setRemovedAt(OffsetDateTime.now());
-                    counselorAssignmentRepository.save(a);
-                    log.info("Auto-removed counselor {} from detachment {} (session removed)",
-                            counselorUserId, a.getDetachment().getId());
-                });
-
-        auditEventService.log(
-                campId,
-                "COUNSELOR_SESSION_REMOVED",
-                "Вожатый отстранён от смены «" + session.getTitle() + "» лагеря «" + camp.getName() + "»",
-                "CAMP_MEMBER",
-                campMember.getId(),
-                adminId,
-                Map.of("counselorUserId", counselorUserId.toString(), "sessionId", sessionId.toString())
-        );
-    }
-
-    // =========================================================================
-    // Полное исключение из лагеря
-    // =========================================================================
-
-    @Override
-    public void removeCounselor(UUID campId, UUID userId, UUID adminId) {
-        log.info("Admin {} removing counselor {} completely from camp {}", adminId, userId, campId);
-
-        Camp camp = campRepository.findById(campId)
-                .orElseThrow(() -> new ResourceNotFoundException("Лагерь не найден: " + campId));
-
-        boolean isOwner = campMemberRepository.existsByCampIdAndUserIdAndRoleAndActiveTrue(
-                campId, adminId, CampRole.OWNER) || camp.getOwnerId().equals(adminId);
-        if (!isOwner) throw new IllegalStateException("Только владелец лагеря может исключать вожатых");
-
-        CampMember member = campMemberRepository
-                .findByCampIdAndUserIdAndActiveTrue(campId, userId)
-                .orElseThrow(() -> new ResourceNotFoundException("Вожатый не найден в лагере"));
-
-        if (member.getRole() != CampRole.COUNSELOR) {
-            throw new IllegalStateException("Нельзя исключить не-вожатого");
+        if (!wasCampMemberActive && dto.getSubRole() != StaffSubRole.COUNSELOR) {
+            campMember.setActive(true);
+            campMember.setRemovedAt(null);
+            campMemberRepository.save(campMember);
         }
 
-        // Деактивируем сам CampMember
-        member.setActive(false);
-        member.setRemovedAt(OffsetDateTime.now());
-        campMemberRepository.save(member);
-
-        // Удаляем все привязки к сменам
-        campMemberSessionRepository.deleteByCampMemberId(member.getId());
-
-        // Снимаем со всех отрядов лагеря
-        counselorAssignmentRepository.findByUserIdAndActiveTrue(userId).stream()
-                .filter(a -> a.getDetachment().getSession().getCamp().getId().equals(campId))
-                .forEach(a -> {
-                    a.setActive(false);
-                    a.setRemovedAt(OffsetDateTime.now());
-                    counselorAssignmentRepository.save(a);
-                    log.info("Auto-removed counselor {} from detachment {} (camp removal)",
-                            userId, a.getDetachment().getId());
-                });
-
-        auditEventService.log(
-                campId,
-                "CAMP_MEMBER_REMOVED",
-                "Вожатый исключён из лагеря «" + camp.getName() + "»",
-                "CAMP_MEMBER",
-                member.getId(),
-                adminId,
-                Map.of("removedUserId", userId.toString())
-        );
-
-        log.info("Counselor {} fully removed from camp {}", userId, campId);
+        return mapCampMember(campMember, createdAssignments);
     }
 
-    // =========================================================================
-    // Прочие методы
-    // =========================================================================
+    @Override
+    public SessionStaffAssignmentResponseDto acceptSessionAssignment(UUID assignmentId, UUID userId) {
+        CampMemberSession cms = campMemberSessionRepository.findById(assignmentId)
+                .orElseThrow(() -> new ResourceNotFoundException("Назначение на смену не найдено: " + assignmentId));
+
+        if (!cms.getCampMember().getUserId().equals(userId)) {
+            throw new IllegalStateException("Можно подтверждать только свои назначения");
+        }
+        if (cms.getSubRole() != StaffSubRole.COUNSELOR) {
+            throw new IllegalStateException("Подтверждение требуется только обычным вожатым");
+        }
+        if (cms.getAssignmentStatus() == AssignmentStatus.AUTO_DETACHED) {
+            throw new IllegalStateException("Назначение уже автоматически завершено");
+        }
+        if (cms.getAssignmentStatus() != AssignmentStatus.PENDING || !cms.isActive()) {
+            throw new IllegalStateException("Назначение уже обработано");
+        }
+
+        cms.setAssignmentStatus(AssignmentStatus.ACCEPTED);
+        cms.setRespondedAt(OffsetDateTime.now());
+        cms.setActive(true);
+
+        CampMember campMember = cms.getCampMember();
+        if (!campMember.isActive()) {
+            campMember.setActive(true);
+            campMember.setRemovedAt(null);
+            campMemberRepository.save(campMember);
+        }
+
+        CampMemberSession saved = campMemberSessionRepository.save(cms);
+        auditEventService.log(
+                cms.getSession().getCamp().getId(),
+                "SESSION_ASSIGNMENT_ACCEPTED",
+                "Сотрудник подтвердил назначение на смену «" + cms.getSession().getTitle() + "»",
+                "SESSION",
+                cms.getSession().getId(),
+                userId,
+                Map.of("assignmentId", assignmentId.toString())
+        );
+        return mapSessionAssignment(saved);
+    }
+
+    @Override
+    public SessionStaffAssignmentResponseDto rejectSessionAssignment(UUID assignmentId, UUID userId) {
+        CampMemberSession cms = campMemberSessionRepository.findById(assignmentId)
+                .orElseThrow(() -> new ResourceNotFoundException("Назначение на смену не найдено: " + assignmentId));
+
+        if (!cms.getCampMember().getUserId().equals(userId)) {
+            throw new IllegalStateException("Можно отклонять только свои назначения");
+        }
+        if (cms.getSubRole() != StaffSubRole.COUNSELOR) {
+            throw new IllegalStateException("Отклонение доступно только обычным вожатым");
+        }
+        if (cms.getAssignmentStatus() != AssignmentStatus.PENDING || !cms.isActive()) {
+            throw new IllegalStateException("Назначение уже обработано");
+        }
+
+        cms.setAssignmentStatus(AssignmentStatus.REJECTED);
+        cms.setRespondedAt(OffsetDateTime.now());
+        cms.setActive(false);
+
+        CampMemberSession saved = campMemberSessionRepository.save(cms);
+        auditEventService.log(
+                cms.getSession().getCamp().getId(),
+                "SESSION_ASSIGNMENT_REJECTED",
+                "Сотрудник отклонил назначение на смену «" + cms.getSession().getTitle() + "»",
+                "SESSION",
+                cms.getSession().getId(),
+                userId,
+                Map.of("assignmentId", assignmentId.toString())
+        );
+        return mapSessionAssignment(saved);
+    }
 
     @Override
     public void leaveCamp(UUID userId) {
-        log.info("Counselor {} leaving all camps", userId);
         List<CampMember> memberships = campMemberRepository.findByUserIdAndActiveTrue(userId);
         for (CampMember member : memberships) {
             if (member.getRole() == CampRole.COUNSELOR) {
-                member.setActive(false);
-                member.setRemovedAt(OffsetDateTime.now());
-                campMemberRepository.save(member);
-                campMemberSessionRepository.deleteByCampMemberId(member.getId());
-                log.info("Counselor {} left camp {}", userId, member.getCamp().getId());
-                return;
+                deactivateCampMember(member, userId, true);
             }
         }
-        throw new ResourceNotFoundException("Активное членство в лагере не найдено");
+    }
+
+    @Override
+    public void removeCounselor(UUID campId, UUID userId, UUID adminId) {
+        requireCampOwner(campId, adminId,
+                "Выгонять вожатого из лагеря может только админ, который создал этот лагерь");
+
+        CampMember member = campMemberRepository.findByCampIdAndUserIdAndActiveTrue(campId, userId)
+                .orElseThrow(() -> new ResourceNotFoundException("Сотрудник лагеря не найден"));
+
+        if (member.getRole() != CampRole.COUNSELOR) {
+            throw new IllegalStateException("Удалять через этот метод можно только вожатых");
+        }
+
+        deactivateCampMember(member, adminId, false);
+    }
+
+    @Override
+    public void removeFromSession(UUID campId, UUID userId, UUID sessionId, UUID adminId) {
+        requireCampOwner(campId, adminId,
+                "Снимать вожатого со смены может только админ, который создал этот лагерь");
+
+        CampMember member = campMemberRepository.findByCampIdAndUserIdAndActiveTrue(campId, userId)
+                .orElseThrow(() -> new ResourceNotFoundException("Сотрудник лагеря не найден"));
+
+        CampMemberSession cms = campMemberSessionRepository.findByCampMemberIdAndSessionId(member.getId(), sessionId)
+                .orElseThrow(() -> new ResourceNotFoundException("Привязка к смене не найдена"));
+
+        cms.setActive(false);
+        cms.setAssignmentStatus(AssignmentStatus.REJECTED);
+        cms.setRespondedAt(OffsetDateTime.now());
+        campMemberSessionRepository.save(cms);
+
+        counselorAssignmentRepository.findByUserIdAndDetachment_Session_IdAndActiveTrue(userId, sessionId)
+                .forEach(a -> {
+                    a.setActive(false);
+                    a.setRemovedAt(OffsetDateTime.now());
+                    counselorAssignmentRepository.save(a);
+                });
+
+        auditEventService.log(
+                campId,
+                "STAFF_REMOVED_FROM_SESSION",
+                "Сотрудник снят со смены",
+                "SESSION",
+                sessionId,
+                adminId,
+                Map.of("userId", userId.toString())
+        );
     }
 
     @Override
     @Transactional(readOnly = true)
     public CampMemberResponseDto getMyCamp(UUID userId) {
         return campMemberRepository.findByUserIdAndActiveTrue(userId).stream()
-                .filter(m -> m.getRole() == CampRole.COUNSELOR)
                 .findFirst()
-                .map(this::mapToDto)
+                .map(member -> mapCampMember(member, mapAssignments(member.getSessions())))
                 .orElse(null);
     }
 
@@ -277,8 +275,82 @@ public class CampMemberServiceImpl implements CampMemberService {
     public List<CampMemberResponseDto> getCampCounselors(UUID campId) {
         return campMemberRepository.findByCampIdAndActiveTrue(campId).stream()
                 .filter(m -> m.getRole() == CampRole.COUNSELOR)
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .map(member -> mapCampMember(member, mapAssignments(member.getSessions())))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<SessionStaffAssignmentResponseDto> getMySessionAssignments(UUID userId) {
+        return campMemberSessionRepository.findByCampMemberUserIdAndActiveTrue(userId).stream()
+                .map(this::mapSessionAssignment)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<SessionStaffAssignmentResponseDto> getSessionAssignments(UUID sessionId, UUID requesterId) {
+        Session session = sessionRepository.findById(sessionId)
+                .orElseThrow(() -> new ResourceNotFoundException("Смена не найдена: " + sessionId));
+
+        boolean canView = campMemberRepository.existsByCampIdAndUserIdAndRoleAndActiveTrue(
+                session.getCamp().getId(), requesterId, CampRole.OWNER)
+                || campMemberSessionRepository.existsAcceptedBySessionIdAndUserIdAndCampIdAndSubRole(
+                        sessionId, requesterId, session.getCamp().getId(), StaffSubRole.SENIOR_COUNSELOR);
+
+        if (!canView) {
+            throw new IllegalStateException("Нет прав на просмотр назначений этой смены");
+        }
+
+        return campMemberSessionRepository.findBySessionId(sessionId).stream()
+                .map(this::mapSessionAssignment)
+                .toList();
+    }
+
+    @Override
+    public CampMemberResponseDto updateStaffSubRole(UUID campId, UUID userId, CampStaffSubRoleUpdateDto dto, UUID adminId) {
+        Camp camp = requireCampOwner(campId, adminId,
+                "Менять подроли сотрудников может только админ, который создал этот лагерь");
+
+        CampMember member = campMemberRepository.findByCampIdAndUserIdAndActiveTrue(campId, userId)
+                .orElseThrow(() -> new ResourceNotFoundException("Сотрудник лагеря не найден"));
+
+        if (member.getRole() != CampRole.COUNSELOR) {
+            throw new IllegalStateException("Подроль можно назначать только сотрудникам-вожатым");
+        }
+
+        List<CampMemberSession> activeAssignments = campMemberSessionRepository.findByCampMemberIdAndActiveTrue(member.getId()).stream()
+                .filter(cms -> cms.getAssignmentStatus() == AssignmentStatus.ACCEPTED)
+                .toList();
+
+        if (activeAssignments.isEmpty()) {
+            throw new IllegalStateException("У сотрудника нет активных назначений в этом лагере");
+        }
+
+        for (CampMemberSession assignment : activeAssignments) {
+            assignment.setSubRole(dto.getSubRole());
+            assignment.setRespondedAt(OffsetDateTime.now());
+            campMemberSessionRepository.save(assignment);
+        }
+
+        if (dto.getSubRole() == StaffSubRole.SENIOR_COUNSELOR || dto.getSubRole() == StaffSubRole.MEDICAL_WORKER) {
+            sendSubRoleNotification(camp, member.getUserId(), dto.getSubRole(), adminId);
+        }
+
+        auditEventService.log(
+                campId,
+                "STAFF_SUBROLE_UPDATED",
+                "Сотруднику обновили подроль на " + dto.getSubRole(),
+                "CAMP_MEMBER",
+                member.getId(),
+                adminId,
+                Map.of(
+                        "userId", userId.toString(),
+                        "subRole", dto.getSubRole().name()
+                )
+        );
+
+        return mapCampMember(member, mapAssignments(member.getSessions()));
     }
 
     @Override
@@ -288,15 +360,155 @@ public class CampMemberServiceImpl implements CampMemberService {
                 .anyMatch(m -> m.getRole() == CampRole.COUNSELOR);
     }
 
-    // =========================================================================
-    // Маппинг
-    // =========================================================================
+    public void autoDetachExpiredAssignments() {
+        List<CampMemberSession> expired = campMemberSessionRepository.findAcceptedExpiredAssignments(java.time.LocalDate.now());
+        for (CampMemberSession cms : expired) {
+            cms.setAssignmentStatus(AssignmentStatus.AUTO_DETACHED);
+            cms.setActive(false);
+            cms.setAutoDetachedAt(OffsetDateTime.now());
+            campMemberSessionRepository.save(cms);
 
-    private CampMemberResponseDto mapToDto(CampMember member) {
-        List<UUID> sessionIds = member.getSessions().stream()
-                .map(cms -> cms.getSession().getId())
-                .collect(Collectors.toList());
+            UUID userId = cms.getCampMember().getUserId();
+            UUID sessionId = cms.getSession().getId();
+            counselorAssignmentRepository.findByUserIdAndDetachment_Session_IdAndActiveTrue(userId, sessionId)
+                    .forEach(a -> {
+                        a.setActive(false);
+                        a.setRemovedAt(OffsetDateTime.now());
+                        counselorAssignmentRepository.save(a);
+                    });
 
+            auditEventService.log(
+                    cms.getSession().getCamp().getId(),
+                    "SESSION_ASSIGNMENT_AUTO_DETACHED",
+                    "Сотрудник автоматически снят с завершённой смены «" + cms.getSession().getTitle() + "»",
+                    "SESSION",
+                    sessionId,
+                    cms.getAssignedByUserId(),
+                    Map.of("userId", userId.toString())
+            );
+        }
+    }
+
+    private CampMember findOrCreateCampMember(Camp camp, UUID userId) {
+        List<CampMember> existing = campMemberRepository.findByCampIdAndUserId(camp.getId(), userId);
+        if (!existing.isEmpty()) {
+            return existing.get(0);
+        }
+
+        try {
+            return campMemberRepository.save(CampMember.builder()
+                    .camp(camp)
+                    .userId(userId)
+                    .role(CampRole.COUNSELOR)
+                    .active(false)
+                    .build());
+        } catch (DataIntegrityViolationException ex) {
+            return campMemberRepository.findByCampIdAndUserId(camp.getId(), userId).stream()
+                    .findFirst()
+                    .orElseThrow(() -> ex);
+        }
+    }
+
+    private Camp requireCampOwner(UUID campId, UUID adminId, String accessDeniedMessage) {
+        Camp camp = campRepository.findById(campId)
+                .orElseThrow(() -> new ResourceNotFoundException("Лагерь не найден: " + campId));
+
+        boolean isOwner = camp.getOwnerId().equals(adminId)
+                || campMemberRepository.existsByCampIdAndUserIdAndRoleAndActiveTrue(campId, adminId, CampRole.OWNER);
+
+        if (!isOwner) {
+            throw new IllegalStateException(accessDeniedMessage);
+        }
+
+        return camp;
+    }
+
+    private void sendAssignmentNotification(Camp camp, Session session, CampMemberSession assignment, UUID targetUserId) {
+        if (assignment.getSubRole() != StaffSubRole.COUNSELOR
+                || assignment.getAssignmentStatus() != AssignmentStatus.PENDING) {
+            return;
+        }
+
+        String sessionTitle = session.getTitle() == null || session.getTitle().isBlank()
+                ? "Смена"
+                : session.getTitle();
+
+        Map<String, String> metadata = new LinkedHashMap<>();
+        metadata.put("assignmentId", assignment.getId().toString());
+        metadata.put("campId", camp.getId().toString());
+        metadata.put("campName", camp.getName());
+        metadata.put("sessionId", session.getId().toString());
+        metadata.put("sessionTitle", sessionTitle);
+        metadata.put("subRole", assignment.getSubRole().name());
+        metadata.put("assignedByUserId", assignment.getAssignedByUserId().toString());
+        metadata.put("decisionRequired", Boolean.TRUE.toString());
+
+        campNotificationService.notifyUser(
+                targetUserId,
+                "CAMP_JOB_INVITATION",
+                "Приглашение на работу в лагере",
+                "Вас пригласили в лагерь «" + camp.getName() + "» на смену «" + sessionTitle + "». Примите или отклоните приглашение.",
+                "SESSION_ASSIGNMENT",
+                assignment.getId(),
+                metadata
+        );
+    }
+
+    private void sendSubRoleNotification(Camp camp, UUID targetUserId, StaffSubRole subRole, UUID assignedByUserId) {
+        String subRoleTitle = subRole == StaffSubRole.SENIOR_COUNSELOR
+                ? "старшим вожатым"
+                : "медработником";
+
+        Map<String, String> metadata = new LinkedHashMap<>();
+        metadata.put("campId", camp.getId().toString());
+        metadata.put("campName", camp.getName());
+        metadata.put("subRole", subRole.name());
+        metadata.put("assignedByUserId", assignedByUserId.toString());
+
+        campNotificationService.notifyUser(
+                targetUserId,
+                "CAMP_STAFF_SUBROLE_ASSIGNED",
+                "Вам назначили новую роль в лагере",
+                "В лагере «" + camp.getName() + "» вас назначили " + subRoleTitle + ".",
+                "CAMP_STAFF_SUBROLE",
+                camp.getId(),
+                metadata
+        );
+    }
+
+    private void deactivateCampMember(CampMember member, UUID actorUserId, boolean selfLeave) {
+        member.setActive(false);
+        member.setRemovedAt(OffsetDateTime.now());
+        campMemberRepository.save(member);
+
+        member.getSessions().forEach(cms -> {
+            cms.setActive(false);
+            if (cms.getAssignmentStatus() == AssignmentStatus.ACCEPTED || cms.getAssignmentStatus() == AssignmentStatus.PENDING) {
+                cms.setAssignmentStatus(AssignmentStatus.REJECTED);
+            }
+            cms.setRespondedAt(OffsetDateTime.now());
+            campMemberSessionRepository.save(cms);
+        });
+
+        counselorAssignmentRepository.findByUserIdAndDetachment_Session_Camp_IdAndActiveTrue(member.getUserId(), member.getCamp().getId())
+                .forEach(a -> {
+                    a.setActive(false);
+                    a.setRemovedAt(OffsetDateTime.now());
+                    counselorAssignmentRepository.save(a);
+                });
+
+        auditEventService.log(
+                member.getCamp().getId(),
+                selfLeave ? "COUNSELOR_LEFT_CAMP" : "COUNSELOR_REMOVED_FROM_CAMP",
+                selfLeave ? "Вожатый покинул лагерь" : "Вожатый исключён из лагеря",
+                "CAMP_MEMBER",
+                member.getId(),
+                actorUserId,
+                Map.of("userId", member.getUserId().toString())
+        );
+    }
+
+    private CampMemberResponseDto mapCampMember(CampMember member, List<SessionStaffAssignmentResponseDto> assignments) {
         return CampMemberResponseDto.builder()
                 .id(member.getId())
                 .campId(member.getCamp().getId())
@@ -304,7 +516,28 @@ public class CampMemberServiceImpl implements CampMemberService {
                 .userId(member.getUserId())
                 .role(member.getRole())
                 .active(member.isActive())
-                .sessionIds(sessionIds)
+                .sessionIds(assignments.stream().map(SessionStaffAssignmentResponseDto::getSessionId).toList())
+                .sessionAssignments(assignments)
+                .build();
+    }
+
+    private List<SessionStaffAssignmentResponseDto> mapAssignments(List<CampMemberSession> sessions) {
+        return sessions.stream().map(this::mapSessionAssignment).collect(Collectors.toList());
+    }
+
+    private SessionStaffAssignmentResponseDto mapSessionAssignment(CampMemberSession cms) {
+        return SessionStaffAssignmentResponseDto.builder()
+                .id(cms.getId())
+                .userId(cms.getCampMember().getUserId())
+                .sessionId(cms.getSession().getId())
+                .sessionTitle(cms.getSession().getTitle())
+                .subRole(cms.getSubRole())
+                .assignmentStatus(cms.getAssignmentStatus())
+                .assignedByUserId(cms.getAssignedByUserId())
+                .assignedAt(cms.getAssignedAt())
+                .respondedAt(cms.getRespondedAt())
+                .autoDetachedAt(cms.getAutoDetachedAt())
+                .active(cms.isActive())
                 .build();
     }
 }
